Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124562

Exposure compensation (setExposureCompensation) doesn't work with the example app

XMLWordPrintable

    • Linux/Wayland
    • d9a1a42cb (dev), c32cd3c02 (6.10), 43fd3cd54 (6.9), 10dc81816 (tqtc/lts-6.8), c1027ce88 (dev), 5a0c012e5 (6.10)
    • Multimedia Current w28 ...

      Linux Ubuntu 22.04.4 / Wayland

      Qt Creator 13.0.0

       

      Steps to reproduce:

      1. Open widgets camera app example - https://doc.qt.io/qt-6/qtmultimedia-camera-example.html
      2. Run the app on the desktop (make sure there are some cameras connected/available)
      3. Change the exposure compensation using a slider
      4. Restart or change the cameras to check if the settings are applied

      Expected: The exposure compensation should take effect

      Actual: Exposure compensation change does not take effect. It works well with CSI camera and Boo2Qt device but does not work with webcams and integrated desktop cameras.

      Reproducibility:  100% **

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            broved Bror Vedeld
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes