Camera example: Remove exposure slider

QCamera API has no way of checking whether the "exposureCompensation"
property is supported. This means the slider has no effect, and we have
no mechanism for hiding it.

This patch removes the slider from the example.

Pick-to: 6.9 6.8
Fixes: QTBUG-124562
Change-Id: I18ae23cabdc46c77e99bf406d7364ac3406a9b9f
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Nils Petter Skålerud <nils.petter.skalerud@qt.io>
(cherry picked from commit d9a1a42cb32d91b907825bc638c1fbb977bfdaf0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>